# cc-redis

./: CLAUDE.md  Cargo.toml  JOURNAL.md  README.md
benches/: my_benchmark.rs
src/: cmd.rs  db.rs  deserializer.rs  main.rs
src/cmd/: commands.rs  error.rs  execution.rs  parser.rs  request.rs  response.rs  types.rs
src/cmd/execution/: arithmetic.rs  list.rs
src/cmd/parser/: arithmetic.rs  list.rs  set.rs
src/resp/: types.rs
