[package]
name = "cc-redis"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
env_logger = "0.11.7"
indexmap = "2.8.0"
log = "0.4.27"
rand = "0.9.0"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
uuid = { version = "1.16.0", features = ["v4"] }

[[bench]]
name = "my_benchmark"
harness = false
